syntax = "proto3";
option go_package = "./;pb";


enum Role {
    Unknown = 0;
    Follower = 1;
    Candidate = 2;
    PreCandidate = 3;
    Leader = 4;
}

enum NodeState {
    NodeStateInitial = 0; // 初始化
    NodeStateNormal = 1; // 正常
    NodeStateElecting = 2; // 选举中
    NodeStateDown = 3; // 下线
}

enum SlotState {
   SlotStateInitial = 0; // 初始化
   SlotStateNormal = 1; // 正常
   SlotStateElecting = 2; // 选举中
}

message Cluster {
    repeated Node nodes = 1; // 节点
    repeated Slot slots = 2; // 节点槽位
}

message Node {
    uint64 nodeID = 1; // 节点ID
    string serverAddr = 2; // 节点服务地址
    Role role = 3; // 节点角色
    NodeState state = 5; // 节点状态
}


message Slot {
    uint32 slot = 1; // 槽位
    uint64 leader = 2; // 领导者节点ID
    SlotState state = 3; // 槽位状态
    repeated uint64 nodes  = 5; // 节点ID
}


message AllocateSlot {
    uint32 slot = 1; // 槽位
    repeated uint64 nodes  = 2; // slot分配的节点
    uint64 leaderID = 3; //  slot的leader（如果为0则自动选举，如果不为0则指定此节点为领导节点）
}

message AllocateSlotSet {
    repeated AllocateSlot allocateSlots = 1; // slot分配
}